--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,58 +1,2 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
-#app, section, section > div {
-  height: 100%;
-}
-
-.ant-layout-content {
-  background: #f8fafc;
-}
-
-.ant-layout-header {
-  background: #0c6fce;
-}
-
-.header-info {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.header-info .name {
-  color: #fff;
-  font-size: 18px;
-  font-weight: 600;
-  margin-right: 15px;
-}
-
-.login-form-button {
-  width: 100%;
-}
-
-.login-form-forgot {
-  float: right;
-}
-
-.register-form .ant-form-item {
-  margin-bottom: 10px;
-}
-.register-form .ant-form-item-label {
-  padding: 0 !important;
-}
-.register-form .ant-form-item-label label {
-  height: 30px;
-}
-
-.auth-spin {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.dashboard {
-  font-size: 20px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
+#app,section,section>div{height:100%}.ant-layout-content{background:#f8fafc}.ant-layout-header{background:#0c6fce}.header-info{align-items:center;display:flex;justify-content:flex-end}.header-info .name{color:#fff;font-size:18px;font-weight:600;margin-right:15px}.login-form-button{width:100%}.login-form-forgot{float:right}.register-form .ant-form-item{margin-bottom:10px}.register-form .ant-form-item-label{padding:0!important}.register-form .ant-form-item-label label{height:30px}.auth-spin,.dashboard{align-items:center;display:flex;height:100%;justify-content:center}.dashboard{font-size:20px;font-weight:700}
